[project]
python = "^3.12"
name = "electronic-prescription-service-account-resources"

[tool.poetry]
name = "electronic-prescription-service-account-resources"
description = "EPS AWS account level resource definitions"
version = "0.0.1-alpha"
authors = [
  "Anthony Brown <anthony.brown8@nhs.net>",
  "Matthew Popat <matthew.popat1@nhs.net>",
  "Phil Gee <phil.gee@nhs.net>",
  "Kris Szlapa <kris.szlapa1@nhs.net>",
  "Jack Spagnoli <jack.spagnoli1@nhs.net>",
  "Tom Smith <tom.smith24@nhs.net>",
  "Adam Brown <adam.brown41@nhs.net>",
  "Sean Steberis <sean.steberis2@nhs.net>",
  "Jonathan Welch <jonathan.welch1@nhs.net>",
  "Jim Wild <james.wild6@nhs.net>"
]
readme = "README.md"
license = "MIT"
repository = "https://github.com/NHSDigital/electronic-prescription-service-account-resources"

[tool.poetry.dependencies]
python = "^3.12"
pyyaml = "^6.0"
docopt = "^0.6.2"
jsonpath-rw = "^1.4.0"
semver = "^3.0.4"
gitpython = "^3.1.45"
pre-commit = "^4.3.0"
cfn-lint = "^1.40.4"
cfn-flip = "^1.3.0"
boto3 = "^1.40.58"
pygithub = "^2.8.1"

[tool.poetry.dev-dependencies]
flake8 = "^7.3.0"
black = "^25.9"
pip-licenses = "^5.5.0"

[tool.poetry.scripts]
